# Addivox

./: .clang-format  .gitignore  404.html  AGENTS.md  AdditiveWindSynth.cpp  AdditiveWindSynth.h  AdditiveWindSynth_DSP.h  CMakeLists.txt  LICENSE  README.md  build_mac.sh  config.h  index.html  sitemap.xml
AdditiveWindSynth/: AdditiveWindSynth.RPP  AdditiveWindSynth.sln  CMakeLists.txt  config.h
AdditiveWindSynth/config/: AdditiveWindSynth-ios.xcconfig  AdditiveWindSynth-mac.xcconfig  AdditiveWindSynth-web.mk  AdditiveWindSynth-win.props
AdditiveWindSynth/presets/: 01_brass.toml  02_clarinet.toml  03_double_reed.toml  03_simple_saw.toml  04_flute.toml  04_simple_square.toml  05_rough_saw.toml  06_rough_square.toml  07_simple_sine.toml
AdditiveWindSynth/projects/: AdditiveWindSynth-aax.vcxproj  AdditiveWindSynth-aax.vcxproj.filters  AdditiveWindSynth-app.vcxproj  AdditiveWindSynth-app.vcxproj.filters  AdditiveWindSynth-clap.vcxproj  AdditiveWindSynth-clap.vcxproj.filters  AdditiveWindSynth-vst2.vcxproj  AdditiveWindSynth-vst2.vcxproj.filters  AdditiveWindSynth-vst3.vcxproj  AdditiveWindSynth-vst3.vcxproj.filters  AdditiveWindSynth-wam-controller.mk  AdditiveWindSynth-wam-processor.mk  AdditiveWindSynth-wasm-dsp.mk  AdditiveWindSynth-wasm-ui.mk
AdditiveWindSynth/projects/AdditiveWindSynth-iOS.xcodeproj/: project.pbxproj
AdditiveWindSynth/projects/AdditiveWindSynth-macOS.xcodeproj/: project.pbxproj
AdditiveWindSynth/resources/: AdditiveWindSynth-AAX-Info.plist  AdditiveWindSynth-CLAP-Info.plist  AdditiveWindSynth-iOS-AUv3-Info.plist  AdditiveWindSynth-iOS-Info.plist  AdditiveWindSynth-macOS-AUv3-Info.plist  AdditiveWindSynth-macOS-AUv3Framework-Info.plist  AdditiveWindSynth-macOS-MainMenu.xib  IPlugAUViewController_vAdditiveWindSynth.xib  main.rc  main.rc_mac_dlg
AdditiveWindSynth/resources/presets/: 01_brass.toml  02_clarinet.toml  03_simple_saw.toml  04_simple_square.toml  brass.toml  simple_saw.toml  simple_square.toml
AdditiveWindSynth/scripts/: makedist-wasm.sh  makedist-web.sh  prepare_resources-ios.py  prepare_resources-mac.py
AdditiveWindSynth/src/: editor_messages.h  harmonic_visualiser_control.h  harmonic_visualiser_frame.h  harmonic_visualiser_sender.h  harmonic_visualizer_control.h  harmonic_visualizer_frame.h  midi_synth.h  oscillator.cpp  oscillator.h  params.h  plugin.cpp  plugin.h  preset_editor_messages.h  presets.h  settings.cpp  settings.h  settings_global.h  settings_oscillator.cpp  settings_oscillator.h  synth_engine.h  transformations.cpp  transformations.h  ui_layout.h  voice.cpp  voice.h
AdditiveWindSynth/src/dsp/: shared.h
AdditiveWindSynth/src/effects/: chorus.cpp  chorus.h  drive.cpp  drive.h  reverb.cpp  reverb.h  shared.h  tone.cpp  tone.h  warmth.cpp  warmth.h
AdditiveWindSynth/src/settings/: effects.cpp  effects.h  eq.h  global.cpp  global.h  oscillator.cpp  oscillator.h  params.h  preset_io.h  preset_key_notes.h  presets.h  settings_effects.cpp  settings_effects.h  settings_global.cpp  settings_global.h  settings_oscillator.cpp  settings_oscillator.h
AdditiveWindSynth/src/synth/: blip_guard.h  midi_synth.h  oscillator.cpp  oscillator.h  synth_engine.h  voice.cpp  voice.h
AdditiveWindSynth/src/ui/: action_selection_control.h  colour.h  editor_panel.h  editor_state.h  eq_editor.h  help_text.h  layout.h  number_box_control.cpp  number_box_control.h  oscillator_slider_control.cpp  oscillator_slider_control.h  preset_editor_keyboard_control.h  preset_editor_state.h  theme.h  transformations.cpp  transformations.h  ui_layout.h
AdditiveWindSynth/src/visualizer/: harmonic_visualizer_control.h  harmonic_visualizer_frame.h
Addivox/: Addivox.RPP  Addivox.sln  CMakeLists.txt  config.h
Addivox/Addivox.xcworkspace/: contents.xcworkspacedata
Addivox/config/: Addivox-ios.xcconfig  Addivox-mac.xcconfig  Addivox-wasm.mk  Addivox-web.mk  Addivox-win.props
Addivox/factory_patches/: 01_bright_brass.toml  02_warm_brass.toml  03_mellow_brass.toml  04_dark_brass.toml  05_bright_reed.toml  06_double_reed.toml  06_warm_reed.toml  07_hollow_reed.toml  07_simple_saw.toml  08_tonewheel_organ_888.toml  09_tonewheel_organ_full.toml  10_church_organ.toml  10_full_pipe_organ.toml  11_simple_saw.toml  12_simple_square.toml  13_simple_sine.toml  14_rough_saw.toml  15_rough_square.toml
Addivox/presets/: 01_brass.toml  01_bright_brass.toml  02_clarinet.toml  02_saxophone.toml  02_warm_brass.toml  03_clarinet.toml  03_double_reed.toml  04_clarinet.toml  04_double_reed.toml  05_flute.toml  06_simple_saw.toml  07_simple_square.toml  09_rough_saw.toml  10_rough_square.toml  11_rough_square.toml
Addivox/projects/: Addivox-aax.vcxproj  Addivox-aax.vcxproj.filters  Addivox-app.vcxproj  Addivox-app.vcxproj.filters  Addivox-clap.vcxproj  Addivox-clap.vcxproj.filters  Addivox-iOS.entitlements  Addivox-macOS.entitlements  Addivox-vst2.vcxproj  Addivox-vst2.vcxproj.filters  Addivox-vst3.vcxproj  Addivox-vst3.vcxproj.filters  Addivox-wam-controller.mk  Addivox-wam-processor.mk  Addivox-wasm-dsp.mk  Addivox-wasm-ui.mk
Addivox/projects/Addivox-iOS.xcodeproj/: project.pbxproj
Addivox/resources/: AUv3Framework.h  Addivox-AAX-Info.plist  Addivox-AU-Info.plist  Addivox-CLAP-Info.plist  Addivox-Pages.xml  Addivox-VST2-Info.plist  Addivox-VST3-Info.plist  Addivox-iOS-AUv3-Info.plist  Addivox-iOS-AUv3Framework-Info.plist  Addivox-iOS-Info.plist  Addivox-iOS-MainInterface.storyboard  Addivox-iOS-launchScreen.storyboard  Addivox-iOS.storyboard  Addivox-macOS-AUv3-Info.plist  Addivox-macOS-AUv3Framework-Info.plist  Addivox-macOS-Info.plist  Addivox-macOS-MainMenu.xib  Addivox.icns  IPlugAUViewController_vAddivox.xib  IPlugAUViewController_vAddivoxDemo.xib  factory_patches.rc  main.rc  main.rc_mac_dlg  main.rc_mac_menu
Addivox/scripts/: makedist-wasm.sh  makedist-web.sh  postbuild-win.bat  prebuild-win.bat  prepare_resources-ios.py  prepare_resources-mac.py  prepare_resources-win.ps1  prepare_resources-win.py
Addivox/src/: cli_main.cpp  demo_mode.h  editor_messages.h  headless_renderer.cpp  headless_renderer.h  midi_file_parser.cpp  plugin.cpp  plugin.h
src/: voice.h  (+11 more)
(+217 files in other folders)
